chore: Run CI build on PR.

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -27,7 +27,11 @@ trigger:
     include:
       - main
       - dev
-pr: none
+pr:
+  branches:
+    include:
+      - main
+      - dev
 
 jobs:
   - job: MsGraphPsSdkCiBuild
