Checkout generation branch.

--- a/.azure-pipelines/weekly-generation.yml
+++ b/.azure-pipelines/weekly-generation.yml
@@ -167,6 +167,8 @@ jobs:
           targetType: inline
           script: |
             git fetch "https://$(GITHUB_TOKEN)@github.com/microsoftgraph/msgraph-sdk-powershell.git" $(GenerationBranch)
+            git checkout $(GenerationBranch)
+            git checkout $(ComputeGenerationBranch.WeeklyGenerationBranch)
             git merge $(GenerationBranch) -s ours
             git push "https://$(GITHUB_TOKEN)@github.com/microsoftgraph/msgraph-sdk-powershell.git"
             git status
